scrollbar-fixes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-
 .rbs *,
 .rbs *::before,
 .rbs *::after {
@@ -10,6 +9,15 @@
   font-size: 25px;
   color: #90cdf9;
   font-weight: 500;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .rbs .header2-text,
